# vigil

./: CLAUDE.md  INDEX.md  Makefile  PRD.md  README.md  alert.py  config.py  config.yaml.example  dataset.py  go2rtc.yaml  healthchecks.py  lmstudio_provider.py  models.py  monitor.py  nanogpt_provider.py  openrouter_provider.py  probe.py  probe_prompt.md  protocols.py  pyproject.toml  security.py  todo.taskpaper  vlm_parser.py  web_server.py
context/: conventions.md  dev-environment.md  lessons.md  na-workflow.md
docs/: INSTALL_GUIDE.md  MOM_GUIDE.md
docs/superpowers/plans/: 2026-04-08-config-loader.md  2026-04-08-models-protocols.md  2026-04-09-alert-sliding-window-cooldown.md  2026-04-09-dataset-logging.md  2026-04-09-monitor-core-loop.md  2026-04-09-monitor-integration-test.md  2026-04-09-patient-location-state-machine.md  2026-04-09-pushover-channel.md  2026-04-10-dashboard-frontend.md  2026-04-12-dataset-encryption-archival.md
docs/superpowers/specs/: 2026-04-08-config-loader-design.md  (+8 more)
setup/: cloudflare_setup.sh  healthcheck_ping.sh  install.sh
setup/systemd/: archiver.service  archiver.timer  go2rtc.service  monitor.service  nas_sync.service  nas_sync.timer
static/: dashboard.css  dashboard.js
templates/: dashboard.html
tests/: conftest.py  test_alert.py  test_config.py  test_dataset.py  test_models.py  test_monitor.py  test_monitor_integration.py  test_patient_location_state_machine.py  test_probe.py  test_protocols.py  test_pushover_channel.py  test_vlm_parser.py  test_web_server.py
tests/fixtures/: config_valid.yaml
