[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grandma-watcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pyyaml",
    "flask",
    "pillow",
]

[tool.setuptools.packages.find]
exclude = ["setup*", "context*", "tests*", "docs*", "dataset*", "static*", "templates*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"prompt_builder.py" = ["E501"]  # _BASE_PROMPT contains verbatim prompt text that must not be wrapped
